@@ -19,6 +19,11 @@ CVS HEAD
     loading an instrument to a sampler channel and adding an
     instrument to MIDI instrument map
 
+  * Implemented more proper retrieval of the MIDI/audio driver settings
+
+  * Implemented new table cell editor for editing string list
+    parameters with possibilities
+
   * Fantasia:
     - Added scrollbar to the channels pane
     - Added new menu items: Edit/Add Channel, Edit/Create MIDI Device,
@@ -28,6 +33,7 @@ CVS HEAD
   * Bug fixes:
     - fixed bug #49
     - the first loaded script was not always been executed
+    - some javadoc documentation fixes
 
 JSampler v0.6a: 2007-08-10
   * The Fantasia distribution is now capable of
